RESOLVED FIXED 143658
Math.imul has wrong length in Safari 8.0.4
https://bugs.webkit.org/show_bug.cgi?id=143658
Summary Math.imul has wrong length in Safari 8.0.4
Jordan Harband
Reported 2015-04-12 23:04:44 PDT
According to https://people.mozilla.org/~jorendorff/es6-draft.html#sec-math.imul, Math.imul should have a length of 2 since it takes two arguments. In Safari 8.0.4, it has a length of 1.
Attachments
Patch (4.23 KB, patch)
2015-04-15 15:44 PDT, Jordan Harband
no flags
Jordan Harband
Comment 1 2015-04-15 15:44:26 PDT
WebKit Commit Bot
Comment 2 2015-04-15 16:14:30 PDT
The commit-queue encountered the following flaky tests while processing attachment 250878 [details]: transitions/default-timing-function.html bug 138901 (author: simon.fraser@apple.com) compositing/overflow/overflow-compositing-descendant.html bug 116485 (authors: mihaip@chromium.org, rniwa@webkit.org, and simon.fraser@apple.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 3 2015-04-15 16:15:58 PDT
Comment on attachment 250878 [details] Patch Clearing flags on attachment: 250878 Committed r182868: <http://trac.webkit.org/changeset/182868>
WebKit Commit Bot
Comment 4 2015-04-15 16:16:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.