Math.imul has wrong length in Safari 8.0.4 https://bugs.webkit.org/show_bug.cgi?id=143658

Patch by Jordan Harband <ljharb@gmail.com> on 2015-04-15
Reviewed by Benjamin Poulain.

Source/JavaScriptCore:

Correcting function length from 1, to 2, to match spec
https://people.mozilla.org/~jorendorff/es6-draft.html#sec-math.imul

* runtime/MathObject.cpp:
(JSC::MathObject::finishCreation):

LayoutTests:

* js/script-tests/math.js:

Canonical link: https://commits.webkit.org/161809@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182868 268f45cc-cd09-0410-ab3c-d52691b4dbfc